--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,19 @@
 .idea/*
 .gradle/*
 build/*
+.gradle/file-system.probe
+.gradle/buildOutputCleanup/outputFiles.bin
+.gradle/buildOutputCleanup/buildOutputCleanup.lock
+.gradle/7.4/fileHashes/fileHashes.lock
+.gradle/7.4/fileHashes/fileHashes.bin
+.gradle/7.4/executionHistory/executionHistory.lock
+.gradle/7.4/executionHistory/executionHistory.bin
+.gradle/7.4/checksums/checksums.lock
+.gradle/file-system.probe
+.gradle/buildOutputCleanup/outputFiles.bin
+.gradle/buildOutputCleanup/buildOutputCleanup.lock
+.gradle/7.4/fileHashes/fileHashes.lock
+.gradle/7.4/fileHashes/fileHashes.bin
+.gradle/7.4/executionHistory/executionHistory.lock
+.gradle/7.4/executionHistory/executionHistory.bin
+.gradle/7.4/checksums/checksums.lock
