--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,8 @@ build/*
 .gradle/7.4/fileHashes/fileHashes.lock
 .gradle/buildOutputCleanup/buildOutputCleanup.lock
 .gradle/file-system.probe
+.gradle/buildOutputCleanup/buildOutputCleanup.lock
+.gradle/7.4/fileHashes/fileHashes.lock
+.gradle/7.4/fileHashes/fileHashes.bin
+.gradle/7.4/executionHistory/executionHistory.lock
+.gradle/7.4/executionHistory/executionHistory.bin
