--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,9 @@ build/*
 .gradle/7.4/fileHashes/fileHashes.bin
 .gradle/7.4/executionHistory/executionHistory.lock
 .gradle/7.4/executionHistory/executionHistory.bin
+.gradle/7.4/executionHistory/executionHistory.bin
+.gradle/7.4/executionHistory/executionHistory.lock
+.gradle/7.4/fileHashes/fileHashes.bin
+.gradle/7.4/fileHashes/fileHashes.lock
+.gradle/buildOutputCleanup/buildOutputCleanup.lock
+.gradle/file-system.probe
