--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,10 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'io.cucumber:cucumber-java:7.11.2'
+    implementation 'io.cucumber:cucumber-java:7.11.2'
     implementation 'io.cucumber:cucumber-core:7.11.2'
-    testImplementation 'io.cucumber:cucumber-junit:7.11.2'
-    testImplementation 'io.rest-assured:rest-assured:5.3.0'
+    implementation 'io.cucumber:cucumber-junit:7.11.2'
+    implementation 'io.rest-assured:rest-assured:5.3.0'
 
 
 
