--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     implementation 'io.cucumber:cucumber-junit:7.11.2'
     implementation 'io.rest-assured:rest-assured:5.3.0'
 
+    implementation  ( "com.relevantcodes:extentreports:2.41.1")
 
 
 
